--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row d-flex align-items-center justify-content-center" style="padding-top: 20%;">
                 <div class="col-4 shadow text-center bg-light rounded-3">
                     <div>
-                        <h1 class="my-3" id="color">#ffffff</h1>
+                        <h1 class="my-3" id="color">#FFFFFF</h1>
                         <button onclick="changeColor()" type="button"
                             class="btn btn-lg btn-primary w-100 mx-0 mb-4">Generate
                             random Background</button>
