--- a/index.html
+++ b/index.html
@@ -18,11 +18,20 @@
                 <div class="col-4 shadow text-center bg-light rounded-3">
                     <div>
                         <h1 class="my-3" id="color">#FFFFFF</h1>
-                        <button onclick="changeColor()" type="button"
-                            class="btn btn-lg btn-primary w-100 mx-0 mb-4">Generate
-                            random Background</button>
+                        <div class="d-flex justify-content-between m-3">
+                            <a type="button" class="w-100 btn btn-primary btn-sm mx-2" onclick="changeColor()">
+                                Generate random Background
+                            </a>
+                            <a type="button" class="w-100 btn btn-danger btn-sm pt-3 mx-2" href=" ">
+                                Reset
+                            </a>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="container mt-5 w-50">
+            <div class="row row-cols-6 d-flex p-3 rounded-3" id="output">
             </div>
         </div>
     </main>
